Corringindo apontamentos
Signed-off-by: Douglas Santos <douglas@batcode.io>